<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/profile_bg"
    tools:context=".terms"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:cardCornerRadius="5dp"
                android:layout_marginHorizontal="5dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:orientation="vertical">
                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        app:cardCornerRadius="20dp"
                        android:layout_marginHorizontal="2dp"
                        android:layout_marginTop="3dp"
                        android:layout_height="wrap_content">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:background="@color/sky_blue"
                            android:layout_height="match_parent">
                            <TextView
                                android:layout_width="match_parent"
                                android:gravity="center"
                                android:textSize="18dp"
                                android:layout_height="wrap_content"
                                android:text="1. Introduction  Welcome to Collab Connect!"
                                android:textColor="@color/white"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/first_term"
                        android:padding="10dp"
                        android:textColor="@color/black"
                        android:textSize="16dp"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:cardCornerRadius="5dp"
                android:layout_marginHorizontal="5dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:orientation="vertical">
                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        app:cardCornerRadius="20dp"
                        android:layout_marginHorizontal="2dp"
                        android:layout_marginTop="3dp"
                        android:layout_height="wrap_content">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:background="@color/sky_blue"
                            android:layout_height="match_parent">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="15dp"
                                android:text="2. Intellectual Property Rights"
                                android:textColor="@color/white"
                                android:textSize="18dp" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:textColor="@color/black"
                        android:text="@string/second_term"
                        android:textSize="16dp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:cardCornerRadius="5dp"
                android:layout_marginHorizontal="5dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:orientation="vertical">
                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        app:cardCornerRadius="20dp"
                        android:layout_marginHorizontal="2dp"
                        android:layout_marginTop="3dp"
                        android:layout_height="wrap_content">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:background="@color/sky_blue"
                            android:layout_height="match_parent">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_marginStart="15dp"
                                android:textSize="18dp"
                                android:layout_height="wrap_content"
                                android:text="3. Restrictions"
                                android:textColor="@color/white"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/third_term"
                        android:textColor="@color/black"
                        android:padding="10dp"
                        android:textSize="16dp"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:cardCornerRadius="5dp"
                android:layout_marginHorizontal="5dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:orientation="vertical">
                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        app:cardCornerRadius="20dp"
                        android:layout_marginHorizontal="2dp"
                        android:layout_marginTop="3dp"
                        android:layout_height="wrap_content">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:background="@color/sky_blue"
                            android:layout_height="match_parent">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_marginStart="15dp"
                                android:textSize="18dp"
                                android:layout_height="wrap_content"
                                android:text="4. User Content"
                                android:textColor="@color/white"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/four_term"
                        android:textColor="@color/black"
                        android:padding="10dp"
                        android:textSize="16dp"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:cardCornerRadius="5dp"
                android:layout_marginHorizontal="5dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:orientation="vertical">
                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        app:cardCornerRadius="20dp"
                        android:layout_marginHorizontal="2dp"
                        android:layout_marginTop="3dp"
                        android:layout_height="wrap_content">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:background="@color/sky_blue"
                            android:layout_height="match_parent">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_marginStart="15dp"
                                android:textSize="18dp"
                                android:layout_height="wrap_content"
                                android:text="5. Your Privacy"
                                android:textColor="@color/white"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/five_term"
                        android:textColor="@color/black"
                        android:padding="10dp"
                        android:textSize="16dp"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:cardCornerRadius="5dp"
                android:layout_marginHorizontal="5dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:orientation="vertical">
                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        app:cardCornerRadius="20dp"
                        android:layout_marginHorizontal="2dp"
                        android:layout_marginTop="3dp"
                        android:layout_height="wrap_content">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:background="@color/sky_blue"
                            android:layout_height="match_parent">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_marginStart="15dp"
                                android:textSize="18dp"
                                android:layout_height="wrap_content"
                                android:text="6. Limitation of liability"
                                android:textColor="@color/white"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/six_term"
                        android:textColor="@color/black"
                        android:padding="10dp"
                        android:textSize="16dp"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:cardCornerRadius="5dp"
                android:layout_marginHorizontal="5dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:orientation="vertical">
                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        app:cardCornerRadius="20dp"
                        android:layout_marginHorizontal="2dp"
                        android:layout_marginTop="3dp"
                        android:layout_height="wrap_content">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:background="@color/sky_blue"
                            android:layout_height="match_parent">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_marginStart="15dp"
                                android:textSize="18dp"
                                android:layout_height="wrap_content"
                                android:text="7. Indemnification  "
                                android:textColor="@color/white"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/seven_term"
                        android:textColor="@color/black"
                        android:padding="10dp"
                        android:textSize="16dp"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:cardCornerRadius="5dp"
                android:layout_marginHorizontal="5dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:orientation="vertical">
                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        app:cardCornerRadius="20dp"
                        android:layout_marginHorizontal="2dp"
                        android:layout_marginTop="3dp"
                        android:layout_height="wrap_content">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:background="@color/sky_blue"
                            android:layout_height="match_parent">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_marginStart="15dp"
                                android:textSize="18dp"
                                android:layout_height="wrap_content"
                                android:text="8. Severability"
                                android:textColor="@color/white"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/eight_term"
                        android:textColor="@color/black"
                        android:padding="10dp"
                        android:textSize="16dp"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:cardCornerRadius="5dp"
                android:layout_marginHorizontal="5dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:orientation="vertical">
                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        app:cardCornerRadius="20dp"
                        android:layout_marginHorizontal="2dp"
                        android:layout_marginTop="3dp"
                        android:layout_height="wrap_content">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:background="@color/sky_blue"
                            android:layout_height="match_parent">
                            <TextView
                                android:layout_width="match_parent"
                               android:layout_marginStart="15dp"
                                android:textSize="18dp"
                                android:layout_height="wrap_content"
                                android:text="9. Variation of Terms"
                                android:textColor="@color/white"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/nine_term"
                        android:textColor="@color/black"
                        android:padding="10dp"
                        android:textSize="16dp"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>